--- a/package.json
+++ b/package.json
@@ -251,8 +251,8 @@
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
+    "formik": "^2.2.9",
     "history": "^5.0.0",
-    "lunch-db": "github:fabian0896/lunch-db",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
