--- a/src/package.json
+++ b/src/package.json
@@ -14,5 +14,7 @@
     "postinstall": "yarn electron-rebuild"
   },
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "lunch-db": "github:fabian0896/lunch-db"
+  }
 }
