--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "build": {
     "productName": "ElectronReact",
+    "buildDependenciesFromSource": true,
+    "npmRebuild": false,
     "appId": "org.erb.ElectronReact",
     "files": [
       "dist/",
@@ -248,6 +250,7 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
+    "caniuse-lite": "^1.0.30001249",
     "clsx": "^1.1.1",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
