--- a/package.json
+++ b/package.json
@@ -259,11 +259,13 @@
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-number-format": "^4.7.3",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "yup": "^0.32.9"
   },
   "devEngines": {
     "node": ">=10.x",
