--- a/package.json
+++ b/package.json
@@ -252,11 +252,13 @@
   "dependencies": {
     "caniuse-lite": "^1.0.30001249",
     "clsx": "^1.1.1",
+    "defaults": "^1.0.3",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
     "formik": "^2.2.9",
     "history": "^5.0.0",
+    "numeral": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-number-format": "^4.7.3",
