--- a/package.json
+++ b/package.json
@@ -267,6 +267,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "source-map-support": "^0.5.19",
+    "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
   "devEngines": {
