--- a/package.json
+++ b/package.json
@@ -258,6 +258,7 @@
     "electron-updater": "^4.3.4",
     "formik": "^2.2.9",
     "history": "^5.0.0",
+    "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
