[UPDATE] search user and detail user view

--- a/package.json
+++ b/package.json
@@ -259,6 +259,7 @@
     "formik": "^2.2.9",
     "history": "^5.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
