--- a/package.json
+++ b/package.json
@@ -264,6 +264,7 @@
     "numeral": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-number-format": "^4.7.3",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
