--- a/package.json
+++ b/package.json
@@ -252,6 +252,7 @@
   "dependencies": {
     "caniuse-lite": "^1.0.30001249",
     "clsx": "^1.1.1",
+    "date-fns": "^2.23.0",
     "defaults": "^1.0.3",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
@@ -259,10 +260,11 @@
     "formik": "^2.2.9",
     "history": "^5.0.0",
     "lodash": "^4.17.21",
-    "lunch-database": "../lunch-database",
+    "lunch-database": "https://github.com/fabian0896/lunch-database",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-number-format": "^4.7.3",
