--- a/src/package.json
+++ b/src/package.json
@@ -16,7 +16,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "compress-images": "^1.9.9",
     "jsreport": "^2.11.0",
+    "pngquant-bin": "^6.0.0",
     "rfid": "https://github.com/fabian0896/serial-rfid.git",
     "serialport": "^9.2.0"
   }
