--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build:renderer": "cross-env NODE_ENV=production webpack --config ./.erb/configs/webpack.config.renderer.prod.babel.js",
     "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir src",
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
-    "package": "rm -rf src/dist && yarn build && electron-builder build --publish never",
+    "package": "yarn build && electron-builder build --publish never",
     "postinstall": "node -r @babel/register .erb/scripts/CheckNativeDep.js && electron-builder install-app-deps && yarn cross-env NODE_ENV=development webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.babel.js && opencollective-postinstall && yarn-deduplicate yarn.lock",
     "start": "node -r @babel/register ./.erb/scripts/CheckPortInUse.js && yarn start:renderer",
     "start:main": "cross-env NODE_ENV=development electron -r ./.erb/scripts/BabelRegister ./src/main.dev.ts",
     "start:renderer": "cross-env NODE_ENV=development webpack serve --config ./.erb/configs/webpack.config.renderer.dev.babel.js",
-    "test": "jest"
+    "test": "jest",
+    "cert": "electron-builder create-self-signed-cert -p never"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -30,10 +31,10 @@
     ]
   },
   "build": {
+    "appId": "org.erb.ElectronReact",
     "productName": "ElectronReact",
     "buildDependenciesFromSource": true,
     "npmRebuild": false,
-    "appId": "org.erb.ElectronReact",
     "files": [
       "assets/",
       "dist/",
