--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "start": "node -r @babel/register ./.erb/scripts/CheckPortInUse.js && yarn start:renderer",
     "start:main": "cross-env NODE_ENV=development electron -r ./.erb/scripts/BabelRegister ./src/main.dev.ts",
     "start:renderer": "cross-env NODE_ENV=development webpack serve --config ./.erb/configs/webpack.config.renderer.dev.babel.js",
-    "test": "jest",
-    "cert": "electron-builder create-self-signed-cert -p never"
+    "test": "jest"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -86,7 +85,11 @@
       "output": "release"
     },
     "extraResources": [
-      "./assets/**"
+      "./assets/**",
+      "node_modules/puppeteer/.local-chromium/**/*"
+    ],
+    "extraFiles": [
+      "node_modules/puppeteer/.local-chromium/**/*"
     ],
     "publish": {
       "provider": "github",
@@ -265,6 +268,7 @@
     "history": "^5.0.0",
     "lodash": "^4.17.21",
     "lunch-database": "https://github.com/fabian0896/lunch-database",
+    "mkdirp": "^1.0.4",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
