--- a/package.json
+++ b/package.json
@@ -85,8 +85,7 @@
       "output": "release"
     },
     "extraResources": [
-      "./assets/**",
-      "node_modules/puppeteer/.local-chromium/**/*"
+      "./assets/**"
     ],
     "extraFiles": [
       "node_modules/puppeteer/.local-chromium/**/*"
@@ -266,6 +265,7 @@
     "electron-updater": "^4.3.4",
     "formik": "^2.2.9",
     "history": "^5.0.0",
+    "jsreport-client": "^1.2.1",
     "lodash": "^4.17.21",
     "lunch-database": "https://github.com/fabian0896/lunch-database",
     "mkdirp": "^1.0.4",
